--- a/src/assets/pages/css/style-shop.css
+++ b/src/assets/pages/css/style-shop.css
@@ -177,6 +177,7 @@ Header and header elements
 	position: absolute;
 	right: -2px;
 	top: 100%;
+	height: auto;
 	z-index: 99999;
 }
 .top-cart-content {
