--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -2,6 +2,7 @@
   background: #d7abb0 !important;  
   display: flex;
   justify-content: center;
+  width: 100%;
 }
 .input-search {
   padding: 7px 0px 10px 0px;
